First pass of basic IDEA-prompted code cleanup
 - Updated to J17 standards some code, simplifying it
 - Fixed some things IDEA called "probable bugs"
 - Removed redundant casts where appropriate
 - IDEA-prompted performance changes